# spintronics

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.ja.md  README.md  TODO.md  WASM_QUICKSTART.md  build-wasm.sh  clippy.toml  rustfmt.toml
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
.github/workflows/: ci.yml
demo/: Cargo.toml  README.md  TESTING.md  run.sh
demo/src/: demos.rs  main.rs  templates.rs  tests.rs
demo/static/css/: style.css
demo/templates/: base.html  index.html  llg.html  materials.html  skyrmion.html  spin_pumping.html
demo/tests/: api_tests.rs
examples/: 2d_material_spintronics.rs  README.md  advanced_spintronics.rs  fem_micromagnetics.rs  fluid_barnett.rs  llg_dynamics_visualization.rs  magnon_propagation.rs  magnonic_crystal.rs  mech_coupling.rs  parallel_magnon_dynamics.rs  reservoir_computing.rs  saitoh_2006_ishe.rs  skyrmion_dynamics.rs  skyrmion_visualization.rs  spin_torque_oscillator.rs  thermal_magnon_transport.rs  topological_insulator.rs  yig_pt_pumping.rs
src/: benchmark.rs  constants.rs  error.rs  lib.rs  llg.rs  prelude.rs  units.rs  validation.rs  vector3.rs
src/afm/: antiferromagnet.rs  mod.rs
src/ai/: mod.rs  reservoir.rs
src/cavity/: hybrid.rs  mod.rs
src/circuit/: accumulation.rs  mod.rs  network.rs  resistor.rs
src/dynamics/: llg.rs  mod.rs
src/effect/: ishe.rs  mod.rs  prelude.rs  rashba.rs  sot.rs  spin_nernst.rs  sse.rs  topological_hall.rs
src/fem/: assembly.rs  element.rs  mesh.rs  micromagnetic.rs  mod.rs  solver.rs
src/fluid/: barnett.rs  mod.rs  navier_stokes.rs  vorticity.rs
src/io/: mod.rs  ovf.rs
src/magnon/: chain.rs  detector.rs  mod.rs  parallel.rs  solver.rs
src/material/: antiferromagnet.rs  ferromagnet.rs  interface.rs  magnetic_2d.rs  mod.rs  multilayer.rs  prelude.rs  temperature.rs  topological.rs  traits.rs  weyl.rs
src/mech/: barnett_effect.rs  cantilever.rs  coupled_dynamics.rs  einstein_de_haas.rs  mod.rs
src/memory/: mod.rs
src/python/: dynamics.rs  effects.rs  materials.rs  mod.rs  simulation.rs  vector.rs
src/stochastic/: mod.rs  thermal.rs
src/texture/: dmi.rs  domain_wall.rs  mod.rs  prelude.rs  skyrmion.rs  topology.rs
src/thermo/: ane.rs  magnon_thermal.rs  mod.rs  multilayer.rs  peltier.rs  prelude.rs
src/transport/: diffusion.rs  mod.rs  pumping.rs
src/visualization/: csv.rs  hdf5.rs  json.rs  mod.rs  vtk.rs
src/wasm/: mod.rs
wasm-demo/: README.md  index.html  serve.sh
