[package]
name = "spintronics-demo"
version = "0.2.0"
edition = "2021"
rust-version = "1.70.0"
authors = ["COOLJAPAN OÜ (Team KitaSan)"]
description = "Interactive web demonstrations for spintronics physics simulations"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
# Core spintronics library
spintronics = { path = "..", default-features = false, features = ["serde"] }

# Web framework
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace", "cors"] }

# Templating
askama = "0.12"
askama_axum = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
reqwest = "0.12"
hyper = "1.8"
